--- a/HWMonitor/de.lproj/Localizable.strings
+++ b/HWMonitor/de.lproj/Localizable.strings
@@ -135,7 +135,7 @@
 "An error occured while trying to download HWSensors installer!" = "Beim Herunterladen ist ein Fehler aufgetreten!";
 
 "%1.0f rpm" = "%1.0f U/min";
-"%1.0frpm" = "%1.0U/min";
+"%1.0frpm" = "%1.0fU/min";
 
 "Downloading %@" = "Lade %@ herunter";
 "%1.2f Mbytes" = "%1.2f MBytes";
